--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "@xinghe/toc",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "description": "A pure javascript lib to generate table of contents (TOC) after page loaded.",
   "main": "lib/index.js",
+  "module": "lib/index.esm.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "rollup --config"
